--- a/libraries/AP_HAL_Quan/test/RCOutput/Makefile
+++ b/libraries/AP_HAL_Quan/test/RCOutput/Makefile
@@ -1,5 +1,5 @@
 include ../../../../mk/apm.mk
 
  .PHONY: upload_sp
-upload_sp : RCInput.bin
-	stm32flash -b 115200 -f -v -w RCInput.bin /dev/ttyUSB0
+upload_sp : RCOutput.bin
+	stm32flash -b 115200 -f -v -w RCOutput.bin /dev/ttyUSB0
